<resources>
    <string name="app_name">Parrises Squares Score Keeper</string>
    <string name="buttonOne">PYRAMID THROW&#10;+7 POINTS</string>
    <string name="buttonTwo">FIELD THROW&#10;+3 POINTS</string>
    <string name="buttonThree">RAMP GOAL&#10;+10 POINTS</string>
    <string name="teamA">FEDERATION</string>
    <string name="teamB">ROMULANS</string>
    <string name="reset">RESET</string>
    <string name="title">PARRISES SQUARES</string>
</resources>
